--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,12 @@ spring.datasource.username=calendar_user
 spring.datasource.password=calendar_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+server.port=8443
+server.ssl.key-store=/home/ec2-user/keystore.jks
+server.ssl.key-store-password=0411key
+server.ssl.key-store-type=JKS
+server.ssl.key-alias=SOSUKE KANDA
+
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 logging.level.org.mybatis=DEBUG
