SSL証明書 エイリアス変更

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=8443
 server.ssl.key-store=/home/ec2-user/keystore.jks
 server.ssl.key-store-password=0411key
 server.ssl.key-store-type=JKS
-server.ssl.key-alias=SOSUKE KANDA
+server.ssl.key-alias=myalias
 
 mybatis.mapper-locations=classpath:mapper/*.xml
 
